--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "mongodb": "^6.12.0",
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
